--- a/B01 FP And OOP/B01_03_advFunc.Rmd
+++ b/B01 FP And OOP/B01_03_advFunc.Rmd
@@ -1,22 +1,20 @@
 ---
 title: B01-03 函数进阶
 subtitle: R Engineer Track
-author: 
-  name: "HMS"
-  company: "[Aetna International](https://www.aetnainternational.com)"
+author: "[Yiying Wang](http://blog.sina.com.cn/madlogos)"
 date: "`r Sys.time()`"
 output: 
   ioslides_presentation: 
-    css: //ship-oa-001/China_Health_Advisory/Analytics/GUIDE And TOOLS/css/rdeck_Violet.css
+    css: ../pres.css
     df_print: paged
     fig_caption: yes
     fig_height: 5.5
     fig_width: 8
     highlight: pygments
     lib_dir: libs
-    logo: //ship-oa-001/China_Health_Advisory/Analytics/GUIDE And TOOLS/css/icons/AetnaIcons/Violet.png
     self_contained: no
     widescreen: yes
+    logo: ../logo.png
 ---
 
 ```{r setup, include=FALSE}
@@ -33,7 +31,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE,
 - [函数参数](#15)
 - [特殊调用](#22)
 
-<p class="footer">Copyright © 2016-2017 Aetna Inc. <span class="cranberry">内部使用，请勿外传。</span><br>部分内容借鉴**Hadley Wickham** [Advanced R](http://adv-r.had.co.nz).</p>
+<p class="footer">部分内容借鉴**Hadley Wickham** [Advanced R](http://adv-r.had.co.nz).</p>
 
 # 知识扩展
 
@@ -536,8 +534,9 @@ getwd()
 
 </div>
 
-## {.teal}
+## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
 
+<br/>[回到主目录](http://madlogos.github.io/R_Tutorial)
 
