--- a/B01 FP And OOP/B01_06_funl_opr.Rmd
+++ b/B01 FP And OOP/B01_06_funl_opr.Rmd
@@ -1,23 +1,20 @@
 ---
 title: B01-06 泛函和函数算子
 subtitle: R Engineer Track
-author: 
-  name: "HMS"
-  company: "[Aetna International](https://www.aetnainternational.com)"
+author: "[Yiying Wang](http://blog.sina.com.cn/madlogos)"
 date: "`r Sys.time()`"
 output: 
   ioslides_presentation: 
-    css: //ship-oa-001/China_Health_Advisory/Analytics/GUIDE And TOOLS/css/rdeck_Violet.css
+    css: ../pres.css
     df_print: paged
     fig_caption: yes
     fig_height: 5.5
     fig_width: 8
     highlight: pygments
     lib_dir: libs
-    logo: //ship-oa-001/China_Health_Advisory/Analytics/GUIDE And TOOLS/css/icons/AetnaIcons/Violet.png
     self_contained: no
     widescreen: yes
-    mathjax: local
+    logo: ../logo.png
 ---
 
 ```{r setup, include=FALSE}
@@ -31,7 +28,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE,
 - [泛函(Functionals)](#3)
 - [函数算子(Function Operators)](#12)
 
-<p class="footer">Copyright © 2016-2017 Aetna Inc. <span class="cranberry">内部使用，请勿外传。</span><br>部分内容借鉴**Hadley Wickham** [Advanced R](http://adv-r.had.co.nz).</p>
+<p class="footer">部分内容借鉴**Hadley Wickham** [Advanced R](http://adv-r.had.co.nz).</p>
 
 # 泛函 (Functionals)
 
@@ -482,7 +479,7 @@ zero <- uniroot(tee(
 
 求解过程的9步迭代细节
 
-```{r tee, echo=FALSE，fig.width=6, fig.height=2.8}
+```{r tee, echo=FALSE, fig.width=6, fig.height=2.8}
 par(mar=c(3.1, 4.1, 1.1, 1.1))
 g <- function(x) cos(x) - x
 plot(seq(-5, 5, 0.01), g(seq(-5, 5, 0.01)), type="l")
@@ -708,8 +705,9 @@ sd2(1:10)
 ## [1] 2.872281
 ```
 
-## {.teal}
+## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
 
+<br/>[回到主目录](http://madlogos.github.io/R_Tutorial)
 
