--- a/A04 Basic Analysis/A04_06_timeseries.Rmd
+++ b/A04 Basic Analysis/A04_06_timeseries.Rmd
@@ -635,5 +635,6 @@ X-squared = 12.679, df = 20, p-value = 0.8907
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
