--- a/A01 R Basics/A01_02_type.Rmd
+++ b/A01 R Basics/A01_02_type.Rmd
@@ -490,3 +490,5 @@ r4   4 FALSE
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
