--- a/A01 R Basics/A01_04_ctrl.Rmd
+++ b/A01 R Basics/A01_04_ctrl.Rmd
@@ -209,4 +209,5 @@ for (i in 1:100) {
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
 
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
