--- a/A01 R Basics/A01_05_style.Rmd
+++ b/A01 R Basics/A01_05_style.Rmd
@@ -357,4 +357,5 @@ calculateSampleCovariance <- function(x, y, verbose = TRUE) {
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
 
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
