--- a/A02 Data Manipulation/A02_06_string_regex.Rmd
+++ b/A02 Data Manipulation/A02_06_string_regex.Rmd
@@ -658,3 +658,6 @@ abcdefghijklm
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
+s
