--- a/A03 Visualization/A03_05_ggplot2.Rmd
+++ b/A03 Visualization/A03_05_ggplot2.Rmd
@@ -529,5 +529,6 @@ ggplot(admit, aes("", n, fill=Admit)) +
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
