--- a/A03 Visualization/A03_06_map.Rmd
+++ b/A03 Visualization/A03_06_map.Rmd
@@ -713,6 +713,7 @@ ggplot() + geom_polygon(aes(long, lat, group=id), data=wmap, fill='gray', color=
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
 
