--- a/A03 Visualization/A03_07_interactive.Rmd
+++ b/A03 Visualization/A03_07_interactive.Rmd
@@ -666,5 +666,6 @@ plot(gvisMerge(Geo, Tbl, horizontal=TRUE))
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
