--- a/A04 Basic Analysis/A04_02_quantitative.Rmd
+++ b/A04 Basic Analysis/A04_02_quantitative.Rmd
@@ -688,5 +688,6 @@ boxplot(Ozone ~ Month, data = airquality)
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
