--- a/A04 Basic Analysis/A04_03_qualitative.Rmd
+++ b/A04 Basic Analysis/A04_03_qualitative.Rmd
@@ -518,5 +518,6 @@ $OR.summary
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
