--- a/A04 Basic Analysis/A04_04_exploratory1.Rmd
+++ b/A04 Basic Analysis/A04_04_exploratory1.Rmd
@@ -553,5 +553,6 @@ par(op)
 ## {.grayblue}
 
 <p style="font-size:100px;font-family:'Arial Black'"><br/>Thank you! </p>
-
+<br><br>
+[返回目录](http://madlogos.github.io/R_Tutorial)
 
